[package]
name = "meticulous"
version = "0.1.1"
edition = "2021"
description = "Result extension to add more meaning to unwrapping"
keywords = ["result", "unwrap", "expect", "error", "error-handling"]
categories = ["rust-patterns"]
repository = "https://github.com/glebpom/meticulous"
documentation = "https://docs.rs/meticulous"
authors = ["Gleb Pomykalov <glebpom@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
autotests = true

[dev-dependencies]
rand = "0.8"

[features]
default = []
disallow-todo-on-release = []

[[example]]
name = "example"
